# django-routines

./: README.md  pyproject.toml
src/: urls.py
src/django_routines/: __init__.py  urls.py
src/django_routines/backends/: email_backend.py
src/django_routines/i18n/: coklu_dil_slug_save.py  slug_redirect.py  slug_yonlendir.py  slugify.py  slugify_tr.py
src/django_routines/images/: compress.py  views.py
src/django_routines/middleware/: admin_redirect.py  language_redirect.py
src/django_routines/ratelimit/: ratelimit_sinir.py
src/django_routines/templatetags/: resim_optimize.py
